--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">BasketSwoosh</string>
     <string name="backgroundApp">BackgroundApp</string>
+    <string name="background_image">background image</string>
+    <string name="app_logo">app logo</string>
+    <string name="desired_league">Desired League</string>
+    <string name="mens">Mens</string>
+    <string name="womens">Womens</string>
+    <string name="co_ed">Co-ed</string>
+    <string name="next">NEXT</string>
+    <string name="swoosh_logo">swoosh logo</string>
+    <string name="go_all_in">GO ALL IN</string>
+    <string name="on_going_all_out">on going all out</string>
+    <string name="find_someone_in_your_city_and_dominate_the_league">Find someone in your city and dominate the league</string>
+    <string name="get_started">GET STARTED</string>
 </resources>
